Fix price disappearing behind Sale text

--- a/src/bem.css
+++ b/src/bem.css
@@ -68,7 +68,6 @@ body {
 	padding: 10px 10px;
 	font-weight: 700;
 	color: #666;
-	flex: 0 0 80px;
 	background-color: #eeeeee;
 	text-align: end;
 }
@@ -77,7 +76,6 @@ body {
 	padding: 10px 10px;
 	font-weight: 700;
 	color: #2db23f;
-	flex: 0 0 80px;
 	background-color: #eeeeee;
 	text-align: end;
 }
